# supersynth

./: .gitignore  .npmignore  Cross.toml  README.md  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
bench/: oscillators.bench.ts  realtime.bench.ts
docs/: effects.md  errors.md  instruments.md  midi.md  organ.md  synth.md  voice.md  waveforms.md
examples/: bass-guitar.ts  cello.ts  clarinet.ts  drums.ts  electric-guitar.ts  flute.ts  french-horn.ts  guitar.ts  harp.ts  harpsichord.ts  marimba.ts  midi-file.ts  midi-organ.ts  oboe.ts  piano.ts  saxophone.ts  strings.ts  synth-lead.ts  trombone.ts  trumpet.ts  violin.ts
examples/util/: midi-player.ts  notes.ts
native/: Cargo.toml
native/src/: lib.rs
native/src/audio/: backend.rs  engine.rs  mod.rs  output.rs
native/src/effects/: biquad.rs  filter.rs  leslie.rs  limiter.rs  loudness.rs  low_pass.rs  mod.rs  overdrive.rs  reverb.rs  scanner.rs
native/src/midi/: input.rs  message.rs
native/src/synth/: chiff.rs  karplus_strong.rs  mod.rs  note.rs  oscillator.rs  voice.rs  waveform.rs
scripts/: analyze-comparison.ts  decode-audio.ts  render-offline.ts  spectral.ts  write-wav.ts
src/: Synth.ts  errors.ts  index.ts  types.ts
src/instruments/: brass.ts  electronic.ts  guitar.ts  organ.ts  percussion.ts  piano.ts  strings.ts  woodwind.ts
test/: engine.test.ts
