[package]
name = "supersynth-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "async"] }
napi-derive = "2"
cpal = { version = "0.15", features = ["jack"] }
midir = "0.10"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
